# wasm-marker-clusterer

./: .gitignore  .travis.yml  Cargo.toml  README.md  babel.config.js  build.sh  index.html  package-lock.json  package.json  tsconfig.json  webpack.config.js
benches/: clustering.rs  points.csv  serializing.rs
benches/utils/: markers.rs  mod.rs
cypress/integration/: clustering.spec.ts
js/: index.js  index.test.ts  index.ts  interfaces.ts  tests.js  tests.ts  worker.js  worker.ts
js/test/: index.html  tests.ts
src/: config.rs  lib.rs
src/structs/: bounds.rs  cluster.rs  marker.rs  mod.rs  unique_marker.rs
src/utils/: bounds.rs
test/: compile-results.sh
test/0.0.4/: test-1  test-10  test-100  test-1000  test-10000  test-100000  test-34464
tests/: browser.rs  serialize.rs
utilities/: Cargo.toml
utilities/src/: data.rs  lib.rs
