[package]
name = "webassembly-marker-clusterer"
version = "0.0.2"
authors = ["Stefan Battiston <stefan.battiston@gmail.com>"]
description = "A WebAssembly alternative to the popular MarkerClustererPlus library for Google Maps"
license = "GPL-3.0-only"
repository = "https://github.com/stefan2718/webassembly-marker-clusterer"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "=0.2.34"
