[package]
name = "webassembly-marker-clusterer"
version = "0.0.9"
authors = ["Stefan Battiston <stefan.battiston@gmail.com>"]
description = "A WebAssembly alternative to the popular MarkerClustererPlus library for Google Maps"
license = "LGPL-3.0-only"
repository = "https://github.com/stefan2718/webassembly-marker-clusterer"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# default = ["wee_alloc"]

[dependencies]
wasm-bindgen = { version = "0.2.51", features = ["serde-serialize"] }
serde = "1.0.101"
serde_derive = "1.0.101"
serde-wasm-bindgen = "0.1.3"
web-sys = { version = "0.3", features = [ "console" ] }
googleprojection = "1.2.0"
uuid = { version = "0.7", features = ["serde", "v4", "wasm-bindgen"] }
lazy_static = "1.4.0"
optional_struct = "0.2.0"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so it's only enabled
# in debug mode.
[target."cfg(debug_assertions)".dependencies]
console_error_panic_hook = "0.1.6"

[dev-dependencies]
wasm-bindgen-test = "0.2.50"
criterion = "0.3"
utilities = { path = "utilities" }
easybench-wasm = "0.2.1"

[profile.release]
lto = true
# Uncomment to use console_error_panic_hook
# debug-assertions = true
codegen-units = 1
panic = 'abort'
# Tell `rustc` to optimize for small code size.
# opt-level = "s"

[profile.bench]
lto = true

[[bench]]
name = "clustering"
harness = false

# config for wasm-pack
[package.metadata.wasm-pack.profile.release]
wasm-opt = ['-O4']